made it so generateDiv now creates a p tag the has the value of clickCount and click count now only counts up and only up.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <button class="genBtn">Generate</button>
     <div class="divSection">Div Section
-        <p id="counter"></p>
+        <!-- <p id="counter"></p> -->
 
 
 
